# fasthangul

./: .clang-format  .codacy.yml  .gitignore  CMakeLists.txt  README.md  codecov.yml  setup.cfg  setup.py
.github/workflows/: python-package.yml  run-test.yml  test-c++.yml  test-python.yml
Benchmarks/Python/: README.md  bench_fasthangul.py  benchmark_jamo.py
Cmake/: CodeCoverage.cmake  Python.cmake  Testing.cmake
Cmake/Modules/: FindMKL.cmake  FindTBB.cmake
Extension/Python/: setup.py
Extension/Python/fasthangul/: jamo.cc  jamo.pyi  normalizer.cc  normalizer.pyi
Extension/Python/tests/: test_normalizer.py
Includes/: fasthangul.hh
Includes/fasthangul/: jamo.hh  normalizer.hh  tokenizer.hh  vocab.hh
Scripts/: install-mkl.sh  install-tbb.sh
Sources/: jamo.cc  normalizer.cc  tokenizer.cc  vocab.cc
Tests/: TestJamo.cc  TestNormalizer.cc  TestTokenizer.cc  TestVocab.cc
benchmark/: bench_fasthangul.py
benchmarks/: requirements.txt
bindings/python/: README.md  setup.py
bindings/python/benchmarks/: benchmark_jamo.py
cmake/: CodeCoverage.cmake  Testing.cmake
cmake/modules/: FindMKL.cmake
fasthangul/: PythonExtension.cc  __init__.py  jamo.cc  jamo.hh  jamo.pyi
include/fasthangul/: jamo.hh  pronounciation.hh
includes/: fasthangul.hh
includes/fasthangul/: jamo.hh  pronounciation.hh
src/: jamo.cc  jamo_test.cc  pronounciation.cc  pronounciation_test.cc
tests/: extension_test_jamo.cc  jamo_test.cc  test_jamo.cc  test_jamo.py
